Reportes de Victor modo ON

--- a/src/main/resources/templates/fragments/otherreports/historialreport.html
+++ b/src/main/resources/templates/fragments/otherreports/historialreport.html
@@ -70,7 +70,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             
         });
         $('#excel').click(function(){
-            $("#formreport").attr('action', '../hijoscapxls');
+            $("#formreport").attr('action', '../historialxls');
             $("form#formreport").submit();
             
         });
