--- a/src/main/resources/templates/fragments/otherreports/empleadoincapacidadreport.html
+++ b/src/main/resources/templates/fragments/otherreports/empleadoincapacidadreport.html
@@ -42,10 +42,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         </div>
                     </div>
                      <div class="form-group">    
-                         <td><a class="btn btn-default" id="generar">PDF</a></td>
+                         <td><a class="btn btn-default" id="pdf">PDF</a></td>
                     </div>
                      <div class="form-group">    
-                         <td><a class="btn btn-default" id="generar">Excel</a></td>
+                         <td><a class="btn btn-default" id="excel">Excel</a></td>
                     </div>
                 </form>
             </div>
@@ -64,8 +64,13 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         $('#fechafinal').datepicker({
             dateFormat: 'yy-mm-dd'
         });
-        $('#generar').click(function(){
-            $("#formreport").attr('action', '../incapacidad/'+ $("#codigo").val().toString());
+        $('#pdf').click(function(){
+            $("#formreport").attr('action', '../empleadoincapacidad/1');
+            $("form#formreport").submit();
+            
+        });
+        $('#excel').click(function(){
+            $("#formreport").attr('action', '../empleadoincapacidadxls');
             $("form#formreport").submit();
             
         });
