--- a/src/main/resources/templates/fragments/incapacidad/incapacidadform.html
+++ b/src/main/resources/templates/fragments/incapacidad/incapacidadform.html
@@ -42,7 +42,18 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <span class="popuptext" id="emp">Seleccione el empleado. .!</span>
                     </div>
                     </div>
-
+    <div class="form-group">
+                        <label class="col-sm-4 control-label">Nombre de Incapacidad:</label>
+                        <div class="col-sm-4">
+                            <input type="text" class="form-control" size="70" maxlength="70" required="true"th:field="*{nombreincapacidad}"/>
+                          
+                        </div>
+                              <div class="popup col-sm-1"><b>
+                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('nombreincapacid')" onmouseout ="javascript:ocultarAyuda('nombreincapacid')">a</a></b>
+                        
+                        <span class="popuptext" id="nombreincapacid">Ingrese el Nombre de la Incapacidad.Solo se acepta. Solo Se acepta 70 Caracteres.!</span>
+                    </div>
+                    </div>
                     <div class="form-group">
                         <label class="col-sm-4 control-label">Numero Formulario ISSS:</label>
                         <div class="col-sm-4">
@@ -108,7 +119,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                     </div>
                  
-                   
+                     </div>
+                    <div class="col-md-6">
                         
                           <div class="form-group">
                             <label class="col-sm-4 control-label">Tipo Incapacidad(*):</label>
@@ -184,7 +196,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                 </div>
                
-                         
+                 </div>         
 <!--                                            <div class="form-group">
                         <label class="col-sm-4 control-label">Subir Documento 2:</label>
                         <div class="col-sm-6">
