--- a/src/main/resources/templates/fragments/incapacidad/incapacidadform.html
+++ b/src/main/resources/templates/fragments/incapacidad/incapacidadform.html
@@ -185,7 +185,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                      <div class="form-group">
                     <label class="col-sm-4 control-label">Subir Documento o Diagnostico:</label>
                     <div class="col-sm-6">
-                        <input type="file" name="file" />
+                        <input type="file" name="file"  />
+                          <button type="file" class="btn btn-success"><span class="glyphicon glyphicon-cloud-upload"></span>Subir</button>
                                <!--class="" required="true" th:field="*{docaprovacion}"-->
                                
                     </div>
