--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadshow.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadshow.html
@@ -15,7 +15,7 @@
     </div> 
         <div class="col-md-8">
             
-           <h3>Datos de Usuario</h3>
+           <h3>Niveles Escolares</h3>
         <div>
             <form class="form-horizontal">
                 <div class="form-group">
