--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -90,7 +90,7 @@
 
 
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Costos de capacitaciones <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Costos <br>de capacitaciones <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
                                 <ul class="dropdown-menu forAnimate" role="menu">
                                     <li><a href="#" th:href="@{/costocapacitaciones/}">Consultar Costo Capacitaciones</a></li>
                                     <li><a href="#" th:href="@{/costocapacitaciones/new/costocapacitacion}">Crear Costo Capacitaciones</a></li>
@@ -98,7 +98,7 @@
                                 </ul>
                             </li>
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Asignar asistencia capacitaciones <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Asignar asistencia <br> de capacitaciones <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
                                 <ul class="dropdown-menu forAnimate" role="menu">
                                     <li><a href="#" th:href="@{/empleadoasistenciacapacitaciones/}">Consultar EmpleadoCapacitaciones</a></li>
                                     <li><a href="#" th:href="@{/empleadoasistenciacapacitaciones/new/empleadoasistenciacapacitacion}">Crear Asistencia de Empleado <br> a Capacitaciones</a></li>
@@ -114,7 +114,7 @@
                             </li>
 
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Diagnosticos de Capacitaciones<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Diagnosticos <br> de Capacitaciones<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
                                 <ul class="dropdown-menu forAnimate" role="menu">
                                     <li><a href="#" th:href="@{/diagnosticocapacitaciones/}">Consultar diagnosticos</a></li>
                                     <li><a href="#" th:href="@{/diagnosticocapacitaciones/new/diagnosticocapacitacion}">Crear Diagnosticos</a></li>
@@ -124,7 +124,7 @@
 
 
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Evaluaciones Capacitaciones<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Evaluaciones <br> de Capacitaciones<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
                                 <ul class="dropdown-menu forAnimate" role="menu">
                                     <li><a href="#" th:href="@{/evaluacioncapacitaciones/}">Consultar Evualuciones Capacitaciones</a></li>
                                     <li><a href="#" th:href="@{/evaluacioncapacitaciones/new/evaluacioncapacitacion}">Crear Evaluación Capacitaciones</a></li>
@@ -226,41 +226,42 @@
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Reportes<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
                                 <ul class="dropdown-menu forAnimate" role="menu">
-                                 <li><a href="#" th:href="@{/otherreports/abogados/}">Reporte de Abogados</a></li>
-<li><a href="#" th:href="@{/otherreports/empleadoincapacidad/}">Reporte de Empleados   <br> con incapacidad</a></li>
-<li><a href="#" th:href="@{/otherreports/hijoscapesp/}">Reporte de empleados con hijos <br> con capacidades especiales</a></li>
-<li><a href="#" th:href="@{/otherreports/historial/}">Reporte de Historial Laboral</a></li>
-<li><a href="#" th:href="@{/otherreports/historial/}">Reporte de Historial Laboral</a></li>
-<li><a href="#" th:href="@{/otherreports/motoristas/}">Reporte de Motoristas</a></li>
-<li><a href="#" th:href="@{/otherreports/notarios/}">Reporte de Notarios</a></li>
-<li><a href="#" th:href="@{/otherreports/renuncias/}">Reporte de renuncias</a></li>
-<li><a href="#" th:href="@{/otherreports/comites/}">Reporte de comites</a></li>
-<li><a href="#" th:href="@{/otherreports/capacitaciones/}">Reporte de capacitaciones</a></li>
-<li><a href="#" th:href="@{/otherreports/cumpleanieros/}">Reporte de cumpleañeros</a></li>
-<li><a href="#" th:href="@{/otherreports/constanciaservicios/}">Constancia de Servicios</a></li>
-<li><a href="#" th:href="@{/otherreports/misionesinternas/}">Reporte de Misiones Internas</a></li>
-<li><a href="#" th:href="@{/otherreports/1misionesexternas/}">Reporte de Misiones externa1</a></li>
-<li><a href="#" th:href="@{/otherreports/2misionesexternas/}">Reporte de Misiones externa2</a></li>
-<li><a href="#" th:href="@{/otherreports/constanciasalariales/}">constancias salariales</a></li>
-<li><a href="#" th:href="@{/comites/report/}">Reporte comites</a></li>
-<li><a href="#" th:href="@{/otherreports/plazasocupadas/}">Reporte Plazas Ocupadas</a></li>
-<li><a href="#" th:href="@{/otherreports/puestoreporte/}">Reporte Puestos a Caducar</a></li>
-<li><a href="#" th:href="@{/otherreports/contrataciones/}">Reporte Contrataciones</a></li>
-<li><a href="#" th:href="@{/otherreports/despidos/}">Reporte de Despidos</a></li>
-<li><a href="#" th:href="@{/otherreports/estadisticoactivos/}">Estadistico de Personal Activo</a></li>
-<li><a href="#" th:href="@{/otherreports/capacitadores/}">Reporte Capacitador</a></li>
-<li><a href="#" th:href="@{/capacitaciones/reporte/}">Reporte de Capacitaciones</a></li>
-<li><a href="#" th:href="@{/otherreports/temasdiagnosticos/}">Reporte de Temas de Diagnostico</a></li>
-<li><a href="#" th:href="@{/otherreports/estadisticocapacitados/}">Estadistico de Personal Capacitado</a></li>
-<li><a href="#" th:href="@{/cuadrodirectivos/report/}">Reporte de Cuadro Directivo</a></li>
-<li><a href="#" th:href="@{/beneficios/report/}">Reporte de Beneficios</a></li>
-<li><a href="#" th:href="@{/otherreports/costocreporte/}">Reporte de costos de Capacitacion</a></li>
-<li><a href="#" th:href="@{/otherreports/reporte/pensionadoreporte}">Reporte de Personal Pensionado</a></li>
-<li><a href="#" th:href="@{/otherreports/indemnizados/}">Reporte de Personal Indemnizado</a></li>
-<li><a href="#" th:href="@{/otherreports/exoneradoreporte/}">Reporte de Personal Exonerado de Marcacion</a></li>
-<li><a href="#" th:href="@{/otherreports/nivelesreporte/}">Reporte de Niveles Escolares</a></li>
-<li><a href="#" th:href="@{/otherreports/evaluacioncap/}">Reporte de Evaluacion de Capacitaciones</a></li>
-
+                                    <li><a href="#" th:href="@{/otherreports/abogados/}">Reporte de Abogados</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/empleadoincapacidad/}">Reporte de Empleados   <br> con incapacidad</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/hijoscapesp/}">Reporte de empleados con hijos <br> con capacidades especiales</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/historial/}">Reporte de Historial Laboral</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/historial/}">Reporte de Historial Laboral</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/motoristas/}">Reporte de Motoristas</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/notarios/}">Reporte de Notarios</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/renuncias/}">Reporte de renuncias</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/comites/}">Reporte de comites</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/capacitaciones/}">Reporte de capacitaciones</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/cumpleanieros/}">Reporte de cumpleañeros</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/constanciaservicios/}">Constancia de Servicios</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/misionesinternas/}">Reporte de Misiones Internas</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/1misionesexternas/}">Reporte de Misiones externa1</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/2misionesexternas/}">Reporte de Misiones externa2</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/constanciasalariales/}">constancias salariales</a></li>
+                                    <li><a href="#" th:href="@{/comites/report/}">Reporte comites</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/plazasocupadas/}">Reporte Plazas Ocupadas</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/puestoreporte/}">Reporte Puestos a Caducar</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/contrataciones/}">Reporte Contrataciones</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/despidos/}">Reporte de Despidos</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/estadisticoactivos/}">Estadistico de Personal Activo</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/capacitadores/}">Reporte Capacitador</a></li>
+                                    <li><a href="#" th:href="@{/capacitaciones/reporte/}">Reporte de Capacitaciones</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/temasdiagnosticos/}">Reporte de Temas de Diagnostico</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/estadisticocapacitados/}">Estadistico de Personal Capacitado</a></li>
+                                    <li><a href="#" th:href="@{/cuadrodirectivos/report/}">Reporte de Cuadro Directivo</a></li>
+                                    <li><a href="#" th:href="@{/beneficios/report/}">Reporte de Beneficios</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/costocreporte/}">Reporte de costos de Capacitacion</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/reporte/pensionadoreporte}">Reporte de Personal Pensionado</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/indemnizados/}">Reporte de Personal Indemnizado</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/exoneradoreporte/}">Reporte de Personal Exonerado <br>de Marcacion</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/nivelesreporte/}">Reporte de Niveles Escolares</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/evaluacioncap/}">Reporte de Evaluacion <br>de Capacitaciones</a></li>
+                                </ul>
+                            </li>
                             <li class="dropdown">
                                 <a th:if="${#request.userPrincipal != null}" th:href="@{/logout}">Cerrar Sessión</a>
                             </li>
@@ -271,21 +272,11 @@
             <div class="main">
                 <!-- Content Here -->
             </div>
-
-
-
         </div>
         <!--</div>-->
-
-
-
-
-
         <!-- Bootstrap core JavaScript
         ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-
-
     </body>
 </html>
