ultimo merge beto se jodio en el estilo

--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -89,7 +89,7 @@ input[type=text],
 input[type=password] {
     width:100%;
   padding:8px 5px;
-  background:linear-gradient(#449d44, #449d44 );
+  background:linear-gradient(#546383, #546383 );
   border:1px solid #222;
   color: white;
   box-shadow:
@@ -135,7 +135,7 @@ input[type=submit] {
     inset 0 1px 0 rgba(255,255,255,0.3),
     inset 0 10px 10px rgba(255,255,255,0.1);
   border-radius:0.3em;
-  background:#03800b;
+  background:#28497d;
   color:white;
   float:right;
   font-weight:bold;
