--- a/src/main/resources/templates/fragments/archivo/archivoform.html
+++ b/src/main/resources/templates/fragments/archivo/archivoform.html
@@ -2,20 +2,20 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
 
-        <title>Crear Comision</title>
+        <title>Cargar Archivos</title>
     <th:block th:include="../templates/header"></th:block>
     
 </head>
 <body> 
  
-      <div class="contenedorizq"><label  >pnt_gecoms</label> 
+<!--      <div class="contenedorizq"><label  >pnt_gecoms</label> 
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
 </div>
-    
+    -->
 <div class="row">
             <div class="col-md-3">
                         <th:block th:include="../templates/menu"></th:block>
@@ -81,6 +81,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
     </div>
     </div>
     <script th:inline="javascript">
+         Textheader('pnt_gecoms',document.title);
         $(document).ready(function () {
         if([[${msg}]]===2){
        swal({
