--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
-        <title>Asistencias Capacitaciones</title>
+        <title> Crear Asistencias Capacitaciones</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-          <div class="contenedorizq"> 
+<!--          <div class="contenedorizq"> 
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
-</div>
+</div>-->
 <div class="row">
             <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
@@ -23,7 +23,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
           <div class="row text-center">
                         <img src="../../static/image/asistencia.png" width="150" th:src="@{/image/asistencia.png}"/>
        
-            <h2>Todas las asistencias Capacitacion</h2>
+            <!--<h2>Todas las asistencias Capacitacion</h2>-->
            <table id="tablita" class="table table-striped table-bordered" >
                     <thead>
                     <tr>
@@ -71,6 +71,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
     </div>
 </body>
  <script th:inline="javascript">
+     Textheader('pnt_asca',document.title)
     $(document).ready(function () {
     if([[${msg}]]===0){
        swal({
@@ -123,7 +124,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 type: "success",
                 icon: "success",
        }).then(function() {
-                location.href = '../../comisiones/';
+                location.href = '../../asistenciacapacitaciones/';
        }); 
 }
     if([[${msg}]]===0){
