--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
@@ -6,13 +6,13 @@
    
 </head>
 <body>
-     <div ><label  >pnt_asca</label> </div>
+<!--     <div ><label  >pnt_asca</label> </div>
        <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
-</div><br>
+</div><br>-->
     <div class="row">
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
@@ -21,7 +21,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
              <br><br>
           <div class="row text-center">
                         <img src="../../static/image/asistencia.png" width="150" th:src="@{/image/asistencia.png}"/>
-            <h3 align="center">Crear Asistencias de Capacitación</h3>
+            <!--<h3 align="center">Crear Asistencias de Capacitación</h3>-->
             <div>
                 <form class="form-horizontal" id="formascap" th:object="${formasistenciacapacitancion}" th:action="@{../asistenciacapacitacion}" method="post">
                     
@@ -162,6 +162,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
     <script th:inline="javascript">
         $(document).ready(function () {
+            Textheader('pnt_asca',document.title);
             $('#fechadesdecomite').datepicker({
                 dateFormat: 'yy-mm-dd'
             });
