--- a/src/main/resources/templates/fragments/capacitacion/capacitaciones.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitaciones.html
@@ -3,19 +3,13 @@
 <head lang="en">
     <!--<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>-->
      <th:block th:include="../templates/header"></th:block>
-    <title>Capacitaciones</title>
+    <title>Litado Capacitaciones</title>
    
      
     
 </head>
 <body>
-          <div class="contenedorizq"> 
-    <label  class="der">
-    <script >
-var f = new Date();
-document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
-</script></label>
-</div>
+
     <div th:if="${not #lists.isEmpty(capacitaciones)}">
         
        <div class="row">
@@ -28,7 +22,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
           <div class="row text-center">
                         <img src="../../static/image/capacitacion.png" width="150" th:src="@{/image/capacitacion.png}"/>
                          </div>
-           <h3 align="center">Listado de Capacitaciones</h3>
+           <!--<h3 align="center">Listado de Capacitaciones</h3>-->
       
       <table id="tablita" class="table table-striped table-bordered" >
                     <thead>
@@ -95,6 +89,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
     </div>
    
    <script th:inline="javascript">
+       Textheader('pnt_ceca',document.title);
       $(document).ready(function () {
             $('#tablita').DataTable( {
         "language": {
