--- a/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
@@ -14,19 +14,19 @@
 </head>
 <body>
     
-     <div class="contenedorizq"><label  >pnt_ceca</label>  
+<!--     <div class="contenedorizq"><label  >pnt_ceca</label>  
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
-</div><br>
+</div><br>-->
     <div class="row">
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div> 
         <div class="col-md-8">
-            <h3 align="center">Crear Capacitación</h3>
+            <!--<h3 align="center">Crear Capacitación</h3>-->
             <div>
                 <form class="form-horizontal" th:object="${capacitacion}" th:action="@{../capacitacion}" method="post">
 
@@ -265,6 +265,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         
     </div>  
     <script th:inline="javascript">
+        Textheader('pnt_ceca',document.title);
     $(document).ready(function () {
     if([[${msg}]]===0){
        swal({
