--- a/src/main/resources/templates/fragments/capacitador/capacitadorform.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorform.html
@@ -8,20 +8,20 @@
 </head>
 <body>
     
-   <div class="contenedorizq"><label  >pnt_ccap</label> 
+<!--   <div class="contenedorizq"><label  >pnt_ccap</label> 
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
-</div><br>
+</div><br>-->
     <!--<div class="container">-->
     <div class="row">
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div> 
         <div class="col-md-8">
-            <h3 align="center">Crear Capacitador</h3>
+            <!--<h3 align="center">Crear Capacitador</h3>-->
             <div>
                 <form class="form-horizontal" th:object="${capacitador}" th:action="@{/capacitadores/capacitador}" method="post">
                     <!--            <input type="hidden" th:field="*{codigocapacitador}"/>
@@ -225,6 +225,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
 </body>
 <script th:inline="javascript">
+    Textheader('pnt_ccap',document.title);
     $(document).ready(function () {
     if([[${msg}]]===0){
        swal({
