--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -8,13 +8,14 @@
 
 </head>
 <body>
-    <div class="contenedorizq"><label  >pnt_crco</label>  
+<!--    <div class="contenedorizq"><label  >pnt_crco</label>  
         <label  class="der">
             <script >
                 var f = new Date();
                 document.write(f.getDate() + "/" + (f.getMonth() + 1) + "/" + f.getFullYear());
             </script></label>
-    </div><br>
+    </div><br>-->
+
     <div class="row">
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
@@ -135,6 +136,8 @@
     </div>  
 
     <script>
+     
+        Textheader('pnt_crco',document.title);
         $(document).ready(function () {
 
         $('#fechadesdecomite').datepicker({
