--- a/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitaciones.html
+++ b/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitaciones.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
-    <title>Diagnostico Capacitaciones</title>
+    <title>Listado Diagnostico Capacitaciones</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
@@ -17,7 +17,7 @@
           <div class="row text-center">
                         <img src="../../static/image/evaluacion.png" width="150" th:src="@{/image/evaluacion.png}"/>
                          </div>
-                    <h3 align="center">Listado de Diagnosticos</h3>
+                    <!--<h3 align="center">Listado de Diagnosticos</h3>-->
                      <table id="tablita" class="table table-striped table-bordered" style="width:100%" >
                          <thead>
                          <tr>
@@ -71,7 +71,7 @@
     });
 	</script>
 <script th:inline="javascript">
-    
+    Textheader('pnt_tdnc',document.title);
        $(document).ready(function () {
             
     if ([[${msg}]] === 0){
