--- a/src/main/resources/templates/fragments/inasistencia/inasistenciaform.html
+++ b/src/main/resources/templates/fragments/inasistencia/inasistenciaform.html
@@ -7,20 +7,22 @@
     
 </head>
 <body>
-      <div class="contenedorizq"><label  >pnt_gecoms</label> 
+<!--      <div class="contenedorizq"><label  >pnt_gecoms</label> 
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
-</div><br>
+</div><br>-->
     <!--<div class="container">-->
     <div class="row">
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div> 
         <div class="col-md-8">
-        <h2 align="center">Crear Inasistencia</h2>
+            <div class="row text-center">
+                        <img src="../../static/image/asistencia.png" width="100" th:src="@{/image/asistencia.png}"/>
+        <!--<h2 align="center">Crear Inasistencia</h2>-->
         <div>
             <form class="form-horizontal" th:object="${inasistencia}" th:action="@{../inasistencia}"  method="post" enctype="multipart/form-data">
 <!--                <input type="hidden" th:field="*{codigocomision}"/>
@@ -116,6 +118,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
 </body>
 <script>
+    Textheader('pnt_inac',document.title);
     function Fechas(val1,val2,val3,val4){
                         var foo=ValidarFecha(val1,val2,val3,val4).split(",");;
                         if(foo[0]!=foo[2]){
