--- a/src/main/resources/templates/fragments/inasistencia/inasistencias.html
+++ b/src/main/resources/templates/fragments/inasistencia/inasistencias.html
@@ -2,18 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
     <th:block th:include="../templates/header"></th:block>
-    <title>Inasistencias</title>
+    <title>Listado de Inasistencias</title>
    
      
     
 </head>
-      <div class="contenedorizq"> 
+<!--      <div class="contenedorizq"> 
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
-</div>
+</div>-->
 <body>
     <div th:if="${not #lists.isEmpty(inasistencias)}">
         
@@ -23,7 +23,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-9">
-           <h3 align="center">Listado de Inasistencias</h3>
+           <!--<h3 align="center">Listado de Inasistencias</h3>-->
       
         <table id="tablita" class="table table-striped table-bordered" style="width:100%" >
             
@@ -82,7 +82,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
    
    <script th:inline="javascript">
      $(document).ready(function () {
-       ;
+       Textheader('pnt_inac',document.title);
     if([[${msg}]]===0){
        swal({
                 title: "Exito!",
