--- a/src/main/resources/templates/fragments/incapacidad/incapacidadform.html
+++ b/src/main/resources/templates/fragments/incapacidad/incapacidadform.html
@@ -11,20 +11,23 @@
 </head>
 <body>
     
-   <div class="contenedorizq"><label  >pnt_reinca</label> 
+<!--   <div class="contenedorizq"><label  >pnt_reinca</label> 
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
-</div><br>
+</div><br>-->
     <!--<div class="container">-->
     <div class="row">
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div> 
         <div class="col-md-8">
-            <h3 align="center">Registro de Incapacidades</h3>
+                  <br><br>
+          <div class="row text-center">
+                        <img src="../../static/image/asistencia.png" width="100" th:src="@{/image/asistencia.png}"/>
+            <!--<h3 align="center">Registro de Incapacidades</h3>-->
             <div>
                 <form class="form-horizontal" th:object="${incapacidad}" th:action="@{../incapacidad}"  method="post" enctype="multipart/form-data">
                      <div class="col-md-6">
@@ -232,6 +235,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
 </body>
 <script th:inline="javascript">
+    Textheader('pnt_creinca',document.title);
     $(document).ready(function () {
     if([[${msg}]]===0){
        swal({
