--- a/src/main/resources/templates/fragments/rol/rolform.html
+++ b/src/main/resources/templates/fragments/rol/rolform.html
@@ -2,17 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 
-    <title>Crear Rol</title>
+    <title>Crear Roles</title>
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
-      <div class="contenedorizq"><label  >pnt_crol</label>
+<!--      <div class="contenedorizq"><label  >pnt_crol</label>
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
-</div><br>
+</div><br>-->
 <div class="row">
     <div class="col-md-3">
                         <th:block th:include="../templates/menu"></th:block>
@@ -22,7 +22,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         <br><br>
                         <img src="../../static/image/roles.png" width="150" th:src="@{/image/roles.png}"/>
                     </div>
-        <h3 align="center">Rol Detalle</h3>
+        <!--<h3 align="center">Rol Detalle</h3>-->
     <div>
         <form class="form-horizontal" th:object="${rol}" th:action="@{../rol}" method="post">
         <input type="hidden" th:field="*{codigorol}"/>
@@ -70,6 +70,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
 </body>
 <script th:inline="javascript">
+    Textheader('pnt_crol',document.title);
     $(document).ready(function () {
     if([[${msg}]]===0){
        swal({
