--- a/src/main/resources/templates/fragments/usuario/usuarioform.html
+++ b/src/main/resources/templates/fragments/usuario/usuarioform.html
@@ -7,13 +7,13 @@
   
   </head>
 <body>
-      <div class="contenedorizq"><label  >pnt_geus</label>
+<!--      <div class="contenedorizq"><label  >pnt_geus</label>
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
-</div><br>
+</div><br>-->
 <div class="row">
       <div class="col-md-3">
                         <th:block th:include="../templates/menu"></th:block>
@@ -160,6 +160,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
 </body>
 <script th:inline="javascript">
+     Textheader('pnt_geus',document.title);
     $(document).ready(function () {
     if([[${msg}]]===0){
        swal({
