--- a/src/main/resources/templates/fragments/usuario/usuarios.html
+++ b/src/main/resources/templates/fragments/usuario/usuarios.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
-    <title>Usuarios</title>
+    <title>Listado de Usuarios</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-          <div class="contenedorizq"> 
+<!--          <div class="contenedorizq"> 
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
-</div>
+</div>-->
 <div class="row">
  <div class="col-md-3">
                         <th:block th:include="../templates/menu"></th:block>
@@ -20,7 +20,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
          <div class="row text-center">
                         <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/images.jpeg}"/>
                     </div>
-        <h3 align="center">Todos los Usuarios</h3>
+        <!--<h3 align="center">Todos los Usuarios</h3>-->
     <div th:if="${not #lists.isEmpty(usuarios)}">
         <div class="table-responsive">
  <table id="tablita" class="table table-striped table-bordered" >
@@ -54,6 +54,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </div>
     </div>
     <script th:inline="javascript">
+         Textheader('pnt_geus',document.title);
       $(document).ready(function () {
             $('#tablita').DataTable( {
         "language": {
